--- a/sobre.html
+++ b/sobre.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>MusicDot</title>
     <meta charset="utf-8">
+    <title>Candle | About the job</title>
+    <link href="img/candle.png" rel="icon">
+    <link rel="stylesheet" href="css/sobre.css">
   </head>
   <body>
     <img src="img/logo.svg" alt="MusicDot">
@@ -13,7 +15,7 @@
           participação em 118 deles.
         </p>
         <p>
-          Nossa matriz fica em Mafra, em Santa Catarina. De lá, saem grande parte das gravações de nossos cursos. Nossa matriz:
+          Nossa matriz fica em <a href="https://www.google.com.br/maps?q=190,GabrielDequech,Mafra,SC">Mafra, em Santa Catarina</a>. De lá, saem grande parte das gravações de nossos cursos. Nossa matriz:
         </p>
         <figure>
           <img src="img/matriz-musicdot.png" alt="Matriz da musicdot">
@@ -22,10 +24,10 @@
           </figcaption>
         </figure>
         <p>
-          Assine os cursos da MusicDot. Acesse nosso site ou entre em contato
-          se tiver dúvidas. Conheça também nossa história e nossos diferenciais.
+          Assine os cursos da MusicDot. Acesse <a href="index.html">nosso site</a> ou entre em contato
+          se tiver dúvidas. Conheça também nossa <a href="#historia">história</a> e nossos <a href="#diferenciais">diferenciais</a>.
         </p>
-    <h2> História </h2>
+    <h2 id="historia"> História </h2>
         <figure>
           <img src="img/familia-tupfeln.jpg" alt="Foto da família tüpfeln">
           <figcaption>Família Tüpfeln</figcaption>
@@ -45,5 +47,12 @@
           Dada a importância econômica da empresa para o Brasil, a família Tüpfeln já recebeu diversos prêmios,
           homenagens e condecorações. Todos os presidentes do Brasil já visitaram as instalações da MusicDot, além de presidentes da União Européia, Ásia e o secretário-geral da ONU.
         </p>
+     <h2 id="diferenciais"> Diferenciais</h2>
+        <ul>
+          <li> Menor preço do mercado, garantido </li>
+          <li> Se você achar um serviço mais barato, leva 1 mês de graça </li>
+          <li> Pague em reais, dólares, euros, libras, dodgecoins, litecoins ou bitcoins </li>
+          <li> Todas as compras acompanham acesso à Alura </li>
+        </ul>
   </body>
 </html>
