--- a/sobre.html
+++ b/sobre.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
     <title>Candle | About the job</title>
     <link href="img/candle.png" rel="icon">
     <link rel="stylesheet" href="css/sobre.css">
@@ -72,7 +73,7 @@
         </address>
       </div>
         
-      <div class="contato__secao contato__secao--telefone">
+      <div id="contato" class="contato__secao contato__secao--telefone">
         <h3 class="contato__subtitulo">Telefone</h3>
         <small>(segunda à sexta, das 00h às 00h)</small>
         
