--- a/sobre.html
+++ b/sobre.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
     <title>Candle | About the job</title>
     <link href="img/candle.png" rel="icon">
     <link rel="stylesheet" href="css/sobre.css">
