--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     </head>
     <body>
         <header class="cabecalho">
-            <!-- Conteúdo do header -->
+            <!-- Conteúdo do header -->         
             <a href="index.html">
-                <img class="cabecalho__logo" src="img/musicdot-logo-light.svg" title="Ir para a página inicial da Musicdot" alt="Musicdot">
+                <img class="cabecalho__logo" src="img/lucia_atelie.jpg" title="Ir para a página inicial da Musicdot" alt="Musicdot">
             </a>
 
             <nav>
@@ -25,7 +25,18 @@
             </nav>
         </header>
 
-        <main>  
+        <main class="main">  
+            <div class="main__menu">
+                <div class="menu__cores">
+                    <p class="menu__cores-title">Menu</p>
+                    <ul class="menu__cores-lista">
+                        <u><li class="menu__cores-lista_cor">azul</li></u>
+                        <u><li class="menu__cores-lista_cor">vermelho</li></u>
+                        <u><li class="menu__cores-lista_cor">verde</li></u> 
+                        <u><li class="menu__cores-lista_cor">amarelo</li></u> 
+                    </ul>
+                </div>
+            </div>
             Conteudo principal
         </main>
 
