--- a/index.html
+++ b/index.html
@@ -27,17 +27,15 @@
 
         <main class="main">  
             <div class="main__menu">
-                <div class="menu__cores">
-                    <p class="menu__cores-title">Menu</p>
-                    <ul class="menu__cores-lista">
-                        <u><li class="menu__cores-lista_cor">azul</li></u>
-                        <u><li class="menu__cores-lista_cor">vermelho</li></u>
-                        <u><li class="menu__cores-lista_cor">verde</li></u> 
-                        <u><li class="menu__cores-lista_cor">amarelo</li></u> 
-                    </ul>
-                </div>
+                    <h1 class="menu__cores-title">Menu</h1>
+                        <section class="item__grid">
+                            <div class="item">azul</div>
+                            <div class="item">vermelho</div>
+                            <div class="item">verde</div>
+                            <div class="item">amarelo</div>
+                        </section>                            
             </div>
-            Conteudo principal
+            Conteúdo principal
         </main>
 
         <footer>
