--- a/index.html
+++ b/index.html
@@ -33,14 +33,51 @@
                             <div class="item">vermelho</div>
                             <div class="item">verde</div>
                             <div class="item">amarelo</div>
-                        </section>                            
+                        </section>                           
             </div>
-            Conteúdo principal
+            <div class="main__content">
+                <div class="main__content-item"> 
+                    <img class="itemImg" src="img/arq1.jpeg"> </img>
+                    <h1 class="itemImg-Title" style="font-weight: bold; 
+                    border: 1px solid rgba(102, 99, 99, 0.541); 
+                    border-radius: 10px; 
+                    color: #ffa81d">
+                    <a>Cartaz Coleção</a></h1>
+                    <p class="itemImg-Price">R$ 9999.99</p>
+                </div>
+                <div class="main__content-item">
+                    <img class="itemImg" src="img/arq2.jpg"> </img>
+                    <h1 class="itemImg-Title" style="font-weight: bold; 
+                    border: 1px solid rgba(102, 99, 99, 0.541); 
+                    border-radius: 10px; 
+                    color: #ffa81d">
+                    <a>Imagem</a></h1>
+                    <p class="itemImg-Price">R$ 9999.99</p>
+                </div>
+                <div class="main__content-item">
+                    <img class="itemImg" src="img/arq3"> </img>
+                    <h1 class="itemImg-Title" style="font-weight: bold; 
+                    border: 1px solid rgba(102, 99, 99, 0.541); 
+                    border-radius: 10px; 
+                    color: #ffa81d">
+                    <a>Imagem</a></h1>
+                    <p class="itemImg-Price">R$ 9999.99</p>
+                </div>
+                <div class="main__content-item">
+                    <img class="itemImg" src="img/arq4.jpeg"> </img>
+                    <h1 class="itemImg-Title" style="font-weight: bold; 
+                    border: 1px solid rgba(102, 99, 99, 0.541); 
+                    border-radius: 10px; 
+                    color: #ffa81d">
+                    <a>Imagem</a></h1>
+                    <p class="itemImg-Price">R$ 9999.99</p>
+                </div>
+            </div>
+            
         </main>
 
         <footer>
             Rodapé
         </footer>
     </body>     
-    
 </html>
