--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     border-radius: 10px; 
                     color: #ffa81d">
                     <a>Cartaz Coleção</a></h1>
-                    <p class="itemImg-Price">R$ 9999.99</p>
+                    <p class="itemImg-Price" style="padding-bottom:2em">R$ 9999.99</p>
                 </div>
                 <div class="main__content-item">
                     <img class="itemImg" src="img/arq2.jpg"> </img>
