--- a/product.html
+++ b/product.html
@@ -7,9 +7,10 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700,&display=block">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <link rel="stylesheet" href="css/reset.css">
-        <link rel="stylesheet" href="css/cabecalho.css">
+        <link rel="stylesheet" href="css/product_header.css">
+        <link rel="stylesheet" href="css/product_body.css">
         <link rel="stylesheet" href="css/footer.css">
-        <title>Candle | Index</title>
+        <title>Candle | Product</title>
     </head>
     <body>
         <header class="cabecalho">
@@ -26,53 +27,36 @@
                 </ul>
             </nav>
         </header>
-
-        <main class="main">  
-            <div class="main__menu">
-                    <h1 class="menu__cores-title">Menu</h1>
-                        <section class="item__grid">
-                            <div class="item">azul</div>
-                            <div class="item">vermelho</div>
-                            <div class="item">verde</div>
-                            <div class="item">amarelo</div>
-                        </section>                           
-            </div>
-            <div class="main__content">
-                <div class="main__content-item"> 
-                    <a href="product.html"><img class="itemImg" src="img/arq1.jpeg"></img></a>
-                    <h1 class="itemImg-Title" style="font-weight: bold; 
-                    border: 1px solid rgba(102, 99, 99, 0.541); 
-                    border-radius: 10px; 
-                    color: #ffa81d">
-                    <a>Cartaz Coleção</a></h1>
-                    <p class="itemImg-Price" style="padding-bottom:2em">R$ 9999.99</p>
-                </div>
-                <div class="main__content-item">
-                    <img class="itemImg" src="img/arq2.jpg"> </img>
-                    <h1 class="itemImg-Title" style="font-weight: bold; 
-                    border: 1px solid rgba(102, 99, 99, 0.541); 
-                    border-radius: 10px; 
-                    color: #ffa81d">
-                    <a>Imagem</a></h1>
-                    <p class="itemImg-Price">R$ 9999.99</p>
-                </div>
-                <div class="main__content-item">
-                    <img class="itemImg" src="img/arq3"> </img>
-                    <h1 class="itemImg-Title" style="font-weight: bold; 
-                    border: 1px solid rgba(102, 99, 99, 0.541); 
-                    border-radius: 10px; 
-                    color: #ffa81d">
-                    <a>Imagem</a></h1>
-                    <p class="itemImg-Price">R$ 9999.99</p>
-                </div>
-                <div class="main__content-item">
-                    <img class="itemImg" src="img/arq4.jpeg"> </img>
-                    <h1 class="itemImg-Title" style="font-weight: bold; 
-                    border: 1px solid rgba(102, 99, 99, 0.541); 
-                    border-radius: 10px; 
-                    color: #ffa81d">
-                    <a>Imagem</a></h1>
-                    <p class="itemImg-Price">R$ 9999.99</p>
+        <main class="main"> 
+            <div class="main_container">
+                <div class="main_row">
+                    <div class="main_col">
+                        <div class="main_photos">
+                            <img class="main_item" src="img/arq1.jpeg"> </img>
+                            <img class="main_item_left" src="img/arq3"> </img>
+                        </div>
+                    </div>
+                    <div class="main_col">
+                        <div class="main_valores">
+                            <h4 class="main_tag">Vela</h4>
+                            <h4>Kit 50 Velas Rechaud Decoração Casamento Lâmparina</h4>
+                            <ul>
+                                <li><a href="#">cor</a></li>
+                                <div class="main_preco_bloco">
+                                    <li class="main_preco"><a href="#">R$999.99</a></li>
+                                </div>
+                                <li class="main_preco_parcelas"><a href="#">ou 10x de 99.90</a></li>
+                                <li><img class="main_preco_img" src="img/arq1.jpeg"> </img></li>
+                                <li>Tamanho</li>
+                                <div class="main_preco_tamanho">
+                                    <a class="main_preco_tamanho_item" href="#">P</a>
+                                    <a class="main_preco_tamanho_item" href="#">M</a>
+                                    <a class="main_preco_tamanho_item" href="#">G</a>
+                                    <a class="main_preco_tamanho_item" href="#">GG</a>
+                                </div>
+                            </ul>
+                        </div>
+                    </div>
                 </div>
             </div>
         </main>
