--- a/product.html
+++ b/product.html
@@ -29,34 +29,15 @@
         </header>
         <main class="main"> 
             <div class="main_container">
-                <div class="main_row">
-                    <div class="main_col">
-                        <div class="main_photos">
-                            <img class="main_item" src="img/arq1.jpeg"> </img>
-                            <img class="main_item_left" src="img/arq3"> </img>
-                        </div>
-                    </div>
-                    <div class="main_col">
-                        <div class="main_valores">
-                            <h4 class="main_tag">Vela</h4>
-                            <h4>Kit 50 Velas Rechaud Decoração Casamento Lâmparina</h4>
-                            <ul>
-                                <li><a href="#">cor</a></li>
-                                <div class="main_preco_bloco">
-                                    <li class="main_preco"><a href="#">R$999.99</a></li>
-                                </div>
-                                <li class="main_preco_parcelas"><a href="#">ou 10x de 99.90</a></li>
-                                <li><img class="main_preco_img" src="img/arq1.jpeg"> </img></li>
-                                <li>Tamanho</li>
-                                <div class="main_preco_tamanho">
-                                    <a class="main_preco_tamanho_item" href="#">P</a>
-                                    <a class="main_preco_tamanho_item" href="#">M</a>
-                                    <a class="main_preco_tamanho_item" href="#">G</a>
-                                    <a class="main_preco_tamanho_item" href="#">GG</a>
-                                </div>
-                            </ul>
-                        </div>
-                    </div>
+                <div class="main_photos">
+                    <img class="main_item" src="img/arq1.jpeg"> </img>
+                    <img class="main_item" src="img/ex3.jpg"> </img>
+                    <img class="main_item" src="img/ex1.jpg"> </img>
+                    <img class="main_item" src="img/ex2.jpg"> </img>  
+                </div>
+                <div class="main_valores">
+                    <h4 class="main_tag">Vela</h4>
+                    <h4 class="main_titulo">Kit 50 Velas Rechaud Decoração Casamento Lâmparina</h4>
                 </div>
             </div>
         </main>
