--- a/product.html
+++ b/product.html
@@ -10,6 +10,7 @@
         <link rel="stylesheet" href="css/product_header.css">
         <link rel="stylesheet" href="css/product_body.css">
         <link rel="stylesheet" href="css/footer.css">
+        <link rel="stylesheet" href="css/product_body_dropdown.css">
         <title>Candle | Product</title>
     </head>
     <body>
@@ -38,6 +39,14 @@
                 <div class="main_valores">
                     <h4 class="main_tag">Vela</h4>
                     <h4 class="main_titulo">Kit 50 Velas Rechaud Decoração Casamento Lâmparina</h4>
+                    <div class="main_preco_bloco">
+                        <p class="main_preco">R$999,90</p>
+                        <p class="main_parcelas">ou 10x de 99,9</p>
+                        <div class="main_img_container"><img class="main_preco_img" src="img/arq1.jpeg"></img></div>
+                        <p class="main_tamanho">Tamanho</p>
+                        <div class="main_bloco_quantidade">
+                        </div>
+                    </div>
                 </div>
             </div>
         </main>
